--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,20 @@ html,
 body {
     margin: 0;
     padding: 0;
+}
+
+.siteWrapper {
     max-width: 1600px;
+    width: 100%;
+}
+
+.siteWrapper a {
+    color: var(--font-sec-color); /*  set all hyperlink text to secondary font color */
+    text-decoration: none; /*  eliminate default underline from anchor tags */
+}
+
+.siteWrapper a:hover {
+    color: var(--font-act-color); /*  set all hyperlink text to accent font color - on hover */
 }
 
 /*******************************************
@@ -17,44 +30,30 @@ body {
 ********************************************
 ********************************************/
 
-.litebg-color {
-    background-color: #A2ADA6;
-}
-
-.darkbg-color {
-    background-color: #758279;
-}
-
-.acntbg-color {
-    background-color: #000000;
-}
-
-.border-primary {
-    border: solid 2px #FFFFFF;
-}
-
-.border-secondary {
-    border: solid 1px #000000;
-}
-
-.border-accent {
-    border-top: solid 3px #FFEB3B;
-}
-
-.font-primary {
-    color: #000000;
-}
-
-.font-secondary {
-    color: #FFFFFF
-}
-
-.font-accent {
-    color: #D84315;
-}
-
-.font-selector {
-    color: #BDBDBD;
+:root {
+    --hmlt-bkg-color: #B2DFDB;
+    --hmdk-bkg-color: #4DB6AC;
+    --hmac-bkg-color: #004D40;
+    --ablt-bkg-color: #D7CCC8;
+    --abdk-bkg-color: #A1887F;
+    --abac-bkg-color: #3E2723;
+    --cilt-bkg-color: #FFE0B2;
+    --cidk-bkg-color: #FFB74D;
+    --ciac-bkg-color: #E65100;
+    --cnlt-bkg-color: #CFD8DC;
+    --cndk-bkg-color: #90A4AE;
+    --cnac-bkg-color: #263238;
+    --mail-foc-color: #FFFFFF;
+    --brdr-pri-color: #FFFFFF;
+    --brdr-sec-color: #000000;
+    --brdr-act-color: #FFEB3B;
+    --brdr-eml-color: #5E97B0;
+    --font-pri-color: #000000;
+    --font-sec-color: #FFFFFF;
+    --font-act-color: #D84315;
+    --font-nav-color: #BDBDBD;
+    --bttn-sub-color: #2E7D32;
+    --bttn-res-color: #FDD835;
 }
 
 /*******************************************
@@ -71,7 +70,7 @@ body {
     font-family: 'Ubuntu Condensed', sans-serif;
 }
 
-#content {
+.content {
     font-family: 'Play', sans-serif;
 }
 
@@ -91,36 +90,49 @@ h4 {
     font-size: 1.25em;
 }
 
+a {
+    text-decoration: none;
+}
+
+/*  remove default underline from anchor tags   */
+
 a, p {
     line-height: 1.25em;
+}
+
+/*******************************************
+    End of Set Font Styles
+********************************************/
+
+/*  positioning for scrollspy   */
+
+#home,
+#about,
+#inventory,
+#contact {
+    position: relative;
+    margin: 0;
+    padding: 0;
 }
 
 /*********************************************
     branding & nav styling
 **********************************************/
 
-#siteWrapper {
-    width: 100%;
-}
-
-.backgroundControl {
-    background-color: #A2ADA6;
-}
-
 #header {
     position: fixed;
     top: 0;
     left: 0;
     z-index: 100;
-    width: 100%;
-    height: 30%;
-    margin: 0;
+    width: 80%;
+    height: 20%;
+    margin: 0 10%;
     padding: 0;
 }
 
-/*.chair {
-    padding-top: .5%;
-}*/
+.chair {
+    padding-top: 1%;
+}
 
 .accentline {
     width: 100%;
@@ -130,160 +142,508 @@ a, p {
 .divider {
     width: 100%;
     height: auto;
-    padding: 0 auto;
+    padding: 0;
 }
 
-#navbar {
-    width: 100%;
-}
-
-#navbar ul {
+.navbar-nav {
     margin: 0;
     padding: 0;
+}
+
+.navbar-nav li {
+    display: inline;
     list-style-type: none;
+    text-decoration: none;
+    width: 20em;
     text-align: center;
 }
 
-#navbar ul li {
-    display: inline;
+.nav li a {
+    padding: .5em 0;
+    color: var(--font-nav-color);
 }
 
-#navbar ul li a {
-    text-decoration: none;
-    padding: 2em 0;
-    width: 25%;
+.nav li.active a {
+    color: var(--font-pri-color);
 }
 
-.navItem.active {
-    color: #000000;
-}
-
-.navItem:hover {
-    color: #D84315;
+.nav li a:hover {
+    color: var(--font-act-color);
 }
 
 .home,
 .about,
 .inventory {
-    border-right: solid 1px #000000;
+    border-right: solid 2px var(--font-nav-color);
 }
 
 /*********************************************
     home page
 **********************************************/
 
-#content {
-    position: absolute;
-    top: 30%;
-    margin: 0 10%;
-}
-
-#home {
+#homePage,
+#about,
+#inventory,
+#contact,
+#footer {
     position: relative;
+    margin: 0 10%;
+    width: 80%;
 }
 
-.img01 {
-    width: 64%;
+#homePage {
+    padding-top: 12%;
+}
+
+#img01h {
+    width: 65%;
     height: 40%;
     object-position: center;
     object-fit: cover;
-    margin-right: 1%;
+    border: 2px solid var(--brdr-pri-color);
 }
 
-.box01 {
+#box01h {
     width: 35%;
-    height: 35.5%;
+    height: 275px;
     padding: .5% 1.5%;
-    margin-left: -1.5%;
-    margin-right: -.025%
+    background-color: var(--hmdk-bkg-color);
+    border: 2px solid var(--brdr-pri-color);
+    color: var(--font-pri-color);
 }
 
-.box01.divider {
-    width: 20%;
+#box01h h1 small {
+    color: var(--font-sec-color);
 }
 
-.box02 {
-    width: 550px;
-    height: 60px;
-    padding-top: .25em;
-    margin-right: 1%;
-    font-size: 200%;
-    text-align: center;
+#box01h h4 a {
+    color: var(--font-sec-color);
 }
 
-.box03 {
-    width: 185px;
-    height: 60px;
-    padding-top: .25em;
-    margin-right: -.5%;
-    font-size: 200%;
-    text-align: center;
-}
-
-.img02 {
-    width: 35%;
-    height: 50%;
-    padding: 0;
-    margin-top: -4%;
-    margin-left: -1.5%;
-    margin-right: -.025%;
-    overflow: hidden;
-}
-
-.img03 {
-    width: 350px;
-    height: 300px;
-    margin-top: -31.1%;
-    overflow: hidden
-}
-
-.img04 {
-    width: 35%;
-    height: 35%;
-    margin-top: -14.75%;
-    margin-left: -1.5%;
-    overflow: hidden;
-}
-
-.box04 {
-    width: 35%;
+#box02h {
+    width: 50%;
     height: 10%;
-    padding-top: .25em;
-    margin-left: -1.5%;
-    margin-right: -.025%;
+    text-align: center;
+    background-color: var(--hmac-bkg-color);
+    border-right: 2px solid var(--brdr-pri-color);
+    color: var(--font-sec-color);
+    padding: 0;
+}
+
+#box03h {
+    width: 15%;
+    height: 10%;
+    text-align: center;
+    background-color: var(--hmac-bkg-color);
+    margin: 0;
+    padding: .825% 0;
+}
+
+#img02h {
+    width: 35%;
+    height: 300px;
+    padding: 0;
+    margin-top: -5%;
+    overflow: hidden;
+    border: 2px solid var(--brdr-pri-color);
+}
+
+#img03h {
+    width: 30%;
+    height: 200px;
+    margin-top: -18.05%;
+    overflow: hidden;
+    border: 2px solid var(--brdr-pri-color);
+}
+
+#img04h {
+    width: 35%;
+    height: 291px;
+    margin-top: -18.1%;
+    overflow: hidden;
+    border: 2px solid var(--brdr-pri-color);
+}
+
+#box04h {
+    width: 35%;
+    height: 86px;
+    margin: 0;
+    text-align: center;
+    background-color: var(--hmdk-bkg-color);
+    border: 2px solid var(--brdr-pri-color);
+    color: var(--font-pri-color);
+}
+
+#box04h a {
+    color: var(--font-sec-color);
+    padding: .25% 0 .3% 0;
+}
+
+#box04h a:hover {
+    color: var(--font-act-color);
+}
+
+.pageDivider {
+    width: 100%;
+    height: auto;
+    padding: 1% 0;
+}
+
+/*********************************************
+    about page
+**********************************************/
+
+#about {
+    position: relative;
+}
+
+#box01a {
+    width: 100%;
+    height: 10%;
+    margin: 0;
+    padding: 0;
+    background-color: var(--hmac-bkg-color);
+    border: 2px solid var(--hmac-bkg-color);
+    color: var(--font-sec-color);
     text-align: center;
 }
 
+#box02a {
+    width: 30%;
+    height: 330px;
+    padding: 2.9% 1.5%;
+    margin: 0;
+    background-color: var(--hmdk-bkg-color);
+    border: 2px solid var(--brdr-pri-color);
+    color: var(--font-pri-color);
+}
 
-/**********************************************
-***********************************************
-    footer
-***********************************************
-***********************************************/
+#img01a {
+    width: 70%;
+    height: 330px;
+    object-position: center;
+    object-fit: cover;
+    overflow: hidden;
+    border: 2px solid var(--brdr-pri-color);
+}
 
-/**********************************************
-    secondary flex-box structure
-***********************************************/
+#box03a {
+    width: 100%;
+    height: 10%;
+    margin: 0;
+    padding: 0 0 .5em;
+    background-color: var(--hmlt-bkg-color);
+    color: var(--font-pri-color);
+    text-align: center;
+}
 
+#img02a {
+    width: 25%;
+    height: 215px;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+    border: 2px solid var(--brdr-pri-color);
+}
 
-/**********************************************
-    styling
-***********************************************/
+#img03a {
+    width: 25%;
+    height: 215px;
+    padding: 0 0 .5em;
+    margin: 0;
+    overflow: hidden;
+    border: 2px solid var(--brdr-pri-color);
+}
 
-#foot {
+#img04a {
+    width: 25%;
+    height: 215px;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+    border: 2px solid var(--brdr-pri-color);
+}
+
+#box04a {
+    width: 25%;
+    height: 215px;
+    padding: 1% 1.5%;
+    margin: 0 5% 0 0;
+    overflow: scroll;
+    background-color: var(--hmdk-bkg-color);
+    border: 2px solid var(--brdr-pri-color);
+    color: var(--font-pri-color);
+}
+
+#box05a {
+    width: 25%;
+    height: 215px;
+    padding: 1% 1.5%;
+    margin: 0 0 0 -5%;
+    overflow: scroll;
+    background-color: var(--hmdk-bkg-color);
+    border: 2px solid var(--brdr-pri-color);
+    color: var(--font-pri-color);
+}
+
+#box06a {
+    width: 25%;
+    height: 215px;
+    padding: 1% 1.5%;
+    margin: 0;
+    overflow: scroll;
+    background-color: var(--hmdk-bkg-color);
+    border: 2px solid var(--brdr-pri-color);
+    color: var(--font-pri-color);
+}
+
+#box04a h3,
+#box05a h3,
+#box06a h3 {
+    color: var(--font-sec-color);
+}
+
+/*********************************************
+    inventory page
+**********************************************/
+
+#boxInvHead {
+    width: 100%;
+    height: 10%;
+    margin: 0;
+    padding: 0;
+    background-color: var(--hmac-bkg-color);
+    border: 2px solid var(--brdr-sec-color);
+    color: var(--font-sec-color);
+    text-align: center;
+}
+
+figure img {
+    width: 274px;
+    height: 274px;
+    overflow: hidden;
+    padding: 2%;
+    background-color: var(--hmdk-bkg-color);
+    border: solid 1px var(--brdr-pri-color);
+    margin: 0;
+}
+
+/*********************************************
+    slide-in captions (screen shots & docs)
+**********************************************/
+
+figure {
+    display: inline-block;
     position: relative;
+}
+
+figcaption {
+    position: absolute;
+    background: var(--ciac-bkg-color);
+    color: var(--font-sec-color);
+    padding: 1% 4%;
+    opacity: 0;
+    top: 0;
+    /*left: -30%;*/
+    -webkit-transition: all 0.6s ease;
+    -moz-transition: all 0.6s ease;
+    -o-transition: all 0.6s ease;
+}
+
+figure:hover figcaption {
+    opacity: .6;
+    cursor: pointer;
+}
+
+figure:hover {
+    cursor: pointer;
+}
+
+figure:before {
+    content: "?";
+    position: absolute;
+    font-weight: 800;
+    /*background: var(--ciac-bkg-color);*/
+    background: rgba(230, 81, 0, 0.75);
+    text-shadow: 0 0 5px grey;
+    color: var(--font-sec-color);
+    width: 24px;
+    height: 24px;
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    border-radius: 12px;
+    text-align: center;
+    font-size: 14px;
+    line-height: 24px;
+    -moz-transition: all 0.6s ease;
+    opacity: 0.75;
+}
+
+figure:hover:before {
+    opacity: 0;
+}
+
+.cap-top:before {
+    top: 10px;
+    left: 10px;
+}
+
+.cap-top figcaption {
+    left: 0;
+    top: -30%;
+}
+
+.cap-top:hover figcaption {
+    top: 0;
+}
+
+/*********************************************
+    contact page
+**********************************************/
+
+.box01c {
+    width: 100%;
+    height: 7.5%;
+    background-color: var(--hmac-bkg-color);
+    border: 2px solid var(--hmac-bkg-color);
+    color: var(--font-sec-color);
+    text-align: center;
+    padding-bottom: 1%;
+}
+
+.box02c {
+    width: 100%;
+    height: 350px;
+    overflow: hidden;
+    border: 2px solid var(--font-nav-color);
+}
+
+.box03c {
+    width: 100%;
+    height: 150px;
+    padding: 1%;
+    background-color: var(--cndk-bkg-color);
+    color: var(--font-sec-color);
+    border: 2px solid var(--brdr-pri-color);
+}
+
+.invitation {
+    padding: .25% .5%;
+    text-align: left;
+}
+
+#email {
+    width: 70%;
+}
+
+#ergoAddress {
+    width: 30%;
+    padding-left: 10%;
+}
+
+input,
+textarea {
+    font-size: 1em;
+    font-weight: 500;
+    background: linear-gradient(to top left, #A3C0CD, #C1DEEB);
+    border: 1px solid #C1DEEB;
+    text-overflow: "";
+    padding: 5px;
+    box-shadow: 3px 3px 3px rgba(50, 50, 50, 0.5), 2px 2px 1px rgba(50, 50, 50, 0.3) inset, -1px -1px 1px rgba(250, 250, 250, 0.7) inset;
+    border-radius: 3px;
+}
+
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="tel"]:focus,
+textarea:focus {
+    background: var(--mail-foc-color);
+    border-color: var(--brdr-eml-color);
+    transition: border-color .4s, background-color .4s;
+}
+
+.sender input {
+    width: 15em;
+}
+
+button {
+    text-align: center;
+    cursor: pointer;
+}
+
+button, input, select, textarea {
+    font-family: inherit;
+    font-size: 100%;
+    color: var(--font-pri-color);
+}
+
+.submit {
+    background-color: var(--bttn-sub-color);
+
+}
+
+.reset {
+    background-color: var(--bttn-res-color);
+
+}
+
+/**********************************************
+    footer
+***********************************************/
+
+#footer {
+    position: relative;
+    padding-top: 2.5%;
+}
+
+#serviceMarking {
     width: 100%;
 }
 
-a {
-    text-decoration: none;     /*  remove underline */
-    font-size: 75%;
+.bizInfo {
+    width: 33.33%;
 }
 
 .copyright {
-    font-size: .75%;
+    text-align: left;
+}
+
+.phoneEmail {
     text-align: center;
-    top: -8px;
+}
+
+ul#iconList {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+ul#iconList li {
+    display: inline;
+    text-align: center;
+}
+
+li.facebook,
+li.linkedin {
+    padding-left: 5%;
+}
+
+#credits {
+    width: 100%;
+    font-size: 75%;
+    padding-bottom: 2.5%;
+}
+
+.cred {
+    width: 50%;
+}
+
+.author {
+    text-align: left;
+}
+
+.citation {
+    text-align: right;
 }
 
 /*******************************************
@@ -317,3 +677,4 @@ a {
     }
 }
 
+/* google maps API key: AIzaSyBWihhJbB4vAXEG3Wfg_5RFGX0Vn4CU7Zc
